src/test/deca/syntax/invalid/synt/log/int.loglex
INT: [@0,0:0='0',<44>,1:0]
INT: [@1,1:2='10',<44>,1:1]
